--- a/DOCKERFILE
+++ b/DOCKERFILE
@@ -2,13 +2,13 @@ FROM ubuntu
 
 MAINTAINER a.weber <a.weber@labor.digital>
 
+RUN apt-get update
+RUN apt-get install -y vim
+RUN apt-get install -y mysql-client
+RUN apt-get install -y curl
+RUN apt-get install -y netcat
+
 COPY import.sh /opt/import.sh
 RUN chmod +x /opt/import.sh
-
-RUN apt-get update && apt-get install -y \
-	vim \
-	mysql-client \
-	curl \
-	netcat
 
 ENTRYPOINT ["/opt/import.sh"]
