--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,38 @@
-name: Build and push base - on push
+name: Build and push - All
 
 on:
-  workflow_dispatch:
-  push:
   schedule:
-    - cron: '0 1 * * 6'
+    - cron: '0 8 * * *'
+  push:
+    branches:
+      - master
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v4
+
       - name: Login to DockerHub Registry
-        run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
-      - name: Build the tagged Docker image
-        run: docker build . --file Dockerfile --tag labordigital/import-export:latest
-      - name: Push the tagged Docker image
-        run: docker push labordigital/import-export:latest
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and push 1.5.1
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: labordigital/import-export:latest
+          platforms: linux/amd64,linux/arm64
+          file: ./Dockerfile
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
